irrelevant stuff added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 datasets/train
 datasets/test
-src/cic/cnn-dog-cat.npy
+src/cic/cnn-dog-cat-sc25
+src/cic/cnn-dog-cat-sc50
+src/cic/cnn-dog-cat-sc75
+src/cic/cnn-dog-cat-sc100
+
