--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 datasets/
 datasets/train
 datasets/test
-src/cic/cnn-dog-cat-sc25.npy
-src/cic/cnn-dog-cat-sc50.npy
-src/cic/cnn-dog-cat-sc75.npy
-src/cic/cnn-dog-cat-sc100.npy
-src/cic/cnn-img-dogs-cats.model
+src/cic/*.model
+src/cic/*.npy
 
